--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
 <resources>
 
     <!-- App -->
-    <string name="app_name">SlimOTA</string>
-    <string name="app_title">SlimOTA</string>
+    <string name="app_name">AimOTA</string>
+    <string name="app_title">AimOTA</string>
 
     <!-- Categories -->
     <string name="ota_category">OTA</string>
